# fftron-sync

./: .env.example  .gitignore  README.md  essentia-endpoint-docs.md  package.json  skills-lock.json  vite.config.ts
.agents/skills/svelte-ui-design/reference/: badges.md  bits-ui-complete.md  buttons.md  cards.md  chips.md  colors-design.md  cookbook.md  core-api.md  dark-mode.md  dividers.md  forms.md  fundamentals.md  iconography.md  installation.md  introduction.md  layouts.md  migrate-v2-to-v3.md  migrate-v3-to-v4.md  placeholders.md  (+10 more)
docs/: Technical Implementation Plan_ Reactive Neural Cinema Engine.md  auto-editing-technical-blueprint-svelte-threlte-theatre.md
docs/interfaces/: runtime-transport-api.md  theatre-export-mapping.md  timeline-schema.md
docs/ops/: live-runbook.md
docs/principles/: 05-envelopes.md  06-auto-editor.md
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/engine/: media.rs  mod.rs  scheduler.rs  tempo.rs
src-tauri/src/timeline/: compiler.rs  mod.rs  runtime_adapter.rs  types.rs
src/lib/audio/: AudioReactivePanel.svelte  wav.test.ts  wav.ts
src/lib/engine/: TransportControlPanel.svelte
src/lib/rendering/: ReactiveStage.svelte
src/lib/services/: essentia.ts
src/lib/stores/: runtime.ts
src/lib/tauri/: commands.ts
src/lib/timeline/: TimelinePanel.svelte
src/lib/timeline-authoring/: TheatreAuthoringPanel.svelte  theatre.ts
src/lib/types/: engine.ts  timeline.test.ts  timeline.ts
src/lib/video/: VideoDeckPanel.svelte
src/routes/: +layout.svelte  +page.svelte
